fixed whitespace and size back to px

--- a/src/site/shared/containers/Header/Left/index.scss
+++ b/src/site/shared/containers/Header/Left/index.scss
@@ -80,8 +80,7 @@
     }
     & input {
         font-size: 24px;
-        
-        width: 20vw; // @TODO: Auto-adjust to fit within a min/max width
+        width: 175px; // @TODO: Auto-adjust to fit within a min/max width
         height: $header-height - 2*$header-padding;
         margin-right: 10px;
 
